# timetable

backend/: .gitignore  .sqlfluff  Cargo.toml  Dockerfile  docker-compose-db-only.yaml  docker-compose.yaml
backend/.sqlx/: query-02aa7533ab4b191a0c572c37c041ba916f28ac2068e9ed5ba8b831286925dab1.json  query-0c7e028dcd10ebd79fec481f3548f3f5a931f7250e7395d1038136129a56e60c.json  query-126341d7038f7d6be52cd9459e392f664e6f37ed4c7360b5bf8bf83ed01a8089.json  query-18798acb1752dc11a9d2a05be2732861923a32b6d5ad9e682997cb90365d1c31.json  query-1e3387450c6487c5391350692aadbcccda786992305b86fcfa62e30d72a8acf7.json  query-27970072fd74dc4c2cccb4ff66c1bfe9d0436ddd147d623f04841f9f3e836e11.json  query-281cb08891c865251e20c39535659cd8d920e247e8ecad2a55fe741e09df701a.json  query-30c16b5c22cde8d9e03ce0ef88c410be5e4b070d622a66bc6604cc16d7f3ef8f.json  query-3554adea01461d9c1da758ca816da87a9584adf31289aad9b9f4fe5f571ed42e.json  query-3fdb510c84512d844f812426e260126fd31ab704c238e044e3d4e7af2e8ff35c.json  query-54c7f4fd9fbecde076c51c389d79bd100fd3e5b8918f390ae4d7d11d0d30a181.json  query-611a04aa3b8e1f2c9176e6e83ea56eb6ecdce27bcf109708a0c3222aad03a32b.json  query-68480f8ec498e6f965a3c3320ab5ccac76d441987cd88ba760a5835153de6ec0.json  query-7d11e819cc2fec0c9322b0b7c14bf7dd258ab2bc352f7e09a40d72531a066136.json  query-94f64de56c4b1015052de202c91971f950fbe3e91ca12aadf09b4dbbde9d0d45.json  query-a161d1378dfba6c1d49ce6ba6183c603e6d7424518707bead47445ccfce078ce.json  query-a401b0e7dc4a56f25fea782f49e5707f2d8915dbc7800d37594a42337a7b8e0f.json  query-a7efecb594ebe5f0a1935df09058d2ca9d2407e997e7900a336a0d0bd6352325.json  query-ac4089a602bd941842df890a6be4e2b6fcff92b46026cbe82e9fd19c6e1cb82a.json  query-afa2054a1c8207086d565e842f14a310365458860f332a710b3d6a987374a5dd.json  query-b868efcbc0fa2a5b5de7fe038a6a957a2bb5fbff1692591eaa97c5e25148a5bf.json  query-c7879db33ff9dbd997b8bf1ecefe60cd750d88688025f0da214569e057bf8bea.json  query-ccc8bc9ab6c6482991c29b3bf61ffd5133ee4ed78cc62fa7d462335d065ee863.json  query-e4d51ade48e446c780845dbd6e76a3aa6e398cb4b0b7809c8e988a7e6ad20c58.json  query-e763f271bf0ac2c1a4624084ce9e7df9c585e23381220983d6d9beea4ddd6800.json  (+3 more)
(+67 files in other folders)
