[package]
name = "timetable-backend"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["cors"] }
sqlx = { version = "0.7", features = [
  "runtime-tokio-rustls",
  "any",
  "postgres",
  "macros",
  "uuid",
  "chrono",
] }
dotenvy = "0.15.7"
reqwest = { version = "0.11.22", default-features = false, features = [
  "rustls-tls",
  "json",
] }
pretty_env_logger = "0.5.0"
log = "0.4.20"
anyhow = "1.0.75"
uuid = { version = "1.5.0", features = ["serde", "v4"] }
chrono = { version = "0.4.31", features = ["serde"] }
ts-rs = { version = "7.0.0", features = ["chrono-impl", "uuid-impl"] }
time = "0.3.30"
thiserror = "1.0.50"
tower = "0.4.13"
mime = "0.3.17"
hyper = { version = "0.14", features = ["full"] }
tower-sessions = { version = "0.6.0", features = [
  "postgres-store",
  "deletion-task",
] }
regex = "1.10.2"
