[package]
name = "timetable-backend"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
chrono = { version = "0.4.31", features = ["serde"] }
dotenvy = "0.15.7"
hyper = { version = "0.14", features = ["full"] }
log = "0.4.20"
mime = "0.3.17"
pretty_env_logger = "0.5.0"
regex = "1.10.2"
reqwest = { version = "0.11.22", default-features = false, features = [
	"rustls-tls",
	"json",
] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7", features = [
	"runtime-tokio-rustls",
	"any",
	"postgres",
	"macros",
	"uuid",
	"chrono",
] }
thiserror = "1.0.50"
time = "0.3.30"
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["cors"] }
tower-sessions = { version = "0.6.0", features = [
	"postgres-store",
	"deletion-task",
] }
ts-rs = { version = "7.0.0", features = ["chrono-impl", "uuid-impl"] }
uuid = { version = "1.5.0", features = ["serde", "v4"] }
